# revola-identify-doc-gaps

./: README.md  documentation_coverage_report.xlsx  main.py  pyproject.toml  requirements.txt
data/cirrascale/: cirrascale_image_captions_output.csv  cirrascale_image_rag_metadata.json  cirrascale_qa.csv  cirrascale_rag_text_metadata.json  cirrascale_slide_captions_output.csv
data/revola/: revola_captions_output.csv  revola_image_captions_output.csv  revola_image_rag_metadata.json  revola_qa.csv  revola_rag_text_metadata.json  revola_slide_captions_output.csv
data/revola/answer_images/: revola_qa.csv
data/revola/captioned_data/: image_captions_output.csv  revola_main_image_captions_output.csv
data/revola/slides/: image_captions_output.csv
data/revola/text_data/: rag_doc_metadata.json  rag_guide_metadata.json
data/revola_answer_images/: revola_main_qa.csv
data/revola_text_data/: output.md
data/revola_text_data/tables/: revola_rag_doc.pdf_page23_table1.txt  revola_rag_doc.pdf_page5_table0.txt
data_ingestion/: ingest_images.py  ingest_text.py  init_index.py
extracted_data/: cirrascale_image_urls.json  cirrascale_keywords.json  cirrascale_nltk_entities.json  cirrascale_sentences.json  cirrascale_spacy_entities.json  cirrascale_spacy_keywords.json  cirrascale_text_data.json
generated_context/: cirrascale_generated_context.json
questions/: create_potential_questions.py  create_questions_answers_revola.py
questions/cirrascale/: cirrascale_icp_data.json  cirrascale_questions.json
questions/revola/: revola_icp_data.json  revola_main_questions.json  revola_main_questions_and_answers.xlsx  revola_questions.json  revola_questions_and_answers.xlsx
services/: answer_queries_with_search.py  evaluate.py  evaluate_docs.py  extract.py  scrape.py
vector_db_services/: delete_record.py  ingest_images.py  ingest_text.py
